<resources>
    <string name="app_name">HealthCare_Android</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">取消</string>
    <string name="stop">停止</string>
    <string name="ok">确定</string>
    <string name="tips">提示</string>
    <string name="submit">提交</string>
    <string name="close">关闭</string>
    <string name="disconnect">断开连接</string>

    <string name="main_measure_title">心率</string>
    <string name="main_monitor_title">监控</string>
    <string name="main_data_title">数据</string>
    <string name="main_profile_title">设置</string>

    <string name="main_drawer_open">show the user details</string>
    <string name="main_drawer_close">hide the user details</string>

    <string name="press_back_key_tips">退出应用将会马上终止所有测量活动，是否确定退出？</string>

    <!-- 测量页面 -->
    <string name="open_bt_btn">open bluetooth</string>
    <string name="close_bt_btn">close bluetooth</string>
    <string name="bt_finding">正在匹配连接设备</string>
    <string name="discovery_bt_btn">discovery</string>
    <string name="beep_unit">BPM</string>
    <string name="measure_text">点击开始测量</string>
    <string name="measure_ing_text">测量进行中</string>
    <string name="measure_blood_high_pressure">血压/上压</string>
    <string name="measure_blood_low_pressure">血压/下压</string>

    <!-- 日历页面 -->
    <string name="calendar_section_text">&#160;&#160;&#160;健康提示</string>

    <!-- slide tabbar -->
    <string name="slide_tabbar_chart1">最近测量</string>
    <string name="slide_tabbar_chart2">今日记录</string>
    <string name="slide_tabbar_chart3">今日状态</string>

    <!-- chart page ctrl -->
    <string name="chart_page_ctrl_up">向上翻页</string>
    <string name="chart_page_ctrl_down">向下翻页</string>

    <!-- chart -->
    <string name="chart_title">数据图表</string>
    <string name="chart_blood_pressure">血压（上/下压）</string>
    <string name="chart_beep">心率</string>
    <string name="chart_assess">健康指数</string>
    <string name="chart_latest_measure_data_legend">最近一次测量的数据：</string>
    <string name="chart_no_data">没有对应数据</string>
    <string name="chart_today_pressure_high_legend">今日测量血压上压数据</string>
    <string name="chart_today_pressure_low_legend">今日测量血压下压数据</string>
    <string name="chart_today_beep_rate_legend">今日测量心率数据</string>

    <!-- profile -->
    <string name="profile_avatar_imageview">个人头像</string>
    <string name="profile_person_indicater">点此进入个人信息</string>
    <string name="profile_blood_mode_tv">血压测量模式</string>
    <string name="profile_blood_mode_auto">自动完成</string>
    <string name="profile_blood_mode_custom">定时测量</string>
    <string name="profile_monitor_mode_tv">睡眠监控模式</string>
    <string name="profile_monitor_mode_auto">自适应测量</string>
    <string name="profile_monitor_mode_custom">自定义测量</string>
    <string name="profile_monitor_auto_speed">%1$dms/次</string>
    <string name="profile_monitor_gap_tv">睡眠监控记录速率</string>
    <string name="profile_timer_tv">定时提醒</string>
    <string name="profile_timer_indicater">点此进入闹钟设置</string>
    <string name="profile_upload_tv">数据同步</string>
    <string name="profile_upload_indicater">点此进入数据同步设置</string>
    <string name="profile_reset_tv">清空本地缓存</string>
    <string name="profile_reset_indicater">点此进入数据重置设置</string>
    <string name="profile_title">设置</string>
    <string name="profile_login">登陆&#160;|&#160;注册</string>

    <!-- personal activity -->
    <string name="personal_title">个人资料</string>
    <string name="zero">0</string>
    <string name="personal_info_today_times">今日测量次数</string>
    <string name="personal_info_total_times">历史测量次数</string>
    <string name="personal_info_health_assess">综合健康评分</string>
    <string name="personal_info_uid_hint">uid</string>
    <string name="personal_info_name_hint">姓名</string>
    <string name="personal_info_sex_hint">性别</string>
    <string name="personal_info_birth_hint">生日</string>
    <string name="personal_info_age_hint">年龄</string>
    <string name="personal_info_constellation_hint">星座</string>
    <string name="personal_info_intro_hint">介绍</string>
    <string name="personal_info_email_hint">邮件地址</string>
    <string name="personal_info_location_hint">住址</string>
    <string name="personal_save">保存</string>
    <string name="personal_logout">注销账号</string>
    <string name="personal_change_pwd">修改密码</string>
    <string name="personal_reset_message">清空本地缓存将会将本地的所有个人测量数据清空，但是服务器上的数据会保留。是否确定重置数据？</string>
    <string name="personal_sex_male">男</string>
    <string name="personal_sex_female">女</string>
    <string name="personal_sex_alien">外星人</string>
    <string name="personal_logout_tips">登出账号将会清空本地所有记录（包括临时账号的记录），该账号的云端记录没有影响。是否确定登出账号？</string>
    <string name="personal_upload_fail_message">上传失败</string>
    <string name="personal_upload_success_message">上传成功</string>
    <string name="personal_upload_ing_message">正在上传，请稍等~</string>
    <string name="personal_refresh_success_message">刷新成功~</string>
    <string name="personal_refresh_fail_message">刷新失败/(ㄒoㄒ)/~~</string>
    <string name="personal_refresh_ing_message">正在跟服务器MM索要您的最新信息，请稍候啦~</string>

    <!-- alarm activity -->
    <string name="alarm_title">闹钟设置</string>
    <string name="alarm_add">添加</string>
    <string name="alarm_delete_message">确定删除该闹钟？</string>
    <string name="alarm_notify_title">@string/app_name</string>
    <string name="alarm_notify_message">主人快过来！是时候测一下你的血压啦~~~</string>

    <!-- backup activity -->
    <string name="backup_backup">上传数据</string>
    <string name="backup_sync">同步数据</string>
    <string name="backup_clear">重置数据</string>
    <string name="backup_title">数据同步</string>
    <string name="backup_backup_ing_message">正在将本地数据提交给服务器MM，请耐心等待哦~</string>
    <string name="backup_upload_fail_message">备份失败</string>
    <string name="backup_upload_success_message">备份成功</string>
    <string name="backup_sync_ing_message">正在向服务器MM请求同步数据，请耐心等待哦~</string>
    <string name="backup_sync_fail_message">同步失败</string>
    <string name="backup_sync_success_message">同步成功</string>
    <string name="backup_clear_message">重置数据将会清空本地以及服务器的全部测量数据（保存在研究云端的数据会保留），这一操作将不可逆。是否确定重置数据？</string>
    <string name="backup_clear_ing_message">正在向服务器MM请求重置数据，请耐心等待哦~</string>
    <string name="backup_clear_fail_message">重置失败</string>
    <string name="backup_clear_success_message">重置成功</string>

    <!-- crop activity -->
    <string name="crop_title">头像裁剪</string>
    <string name="crop_save">保存</string>

    <!-- monitor -->
    <string name="monitor_accelerate_unit">m/s2</string>
    <string name="monitor_accelerate_chart_title">振&#160;动&#160;数&#160;据&#160;图</string>
    <string name="monitor_screen_chart_title">屏&#160;幕&#160;亮&#160;灭&#160;图</string>
    <string name="monitor_accelerate_value_string">%1$.2f/%2$.2f/%3$.2f</string>
    <string name="monitor_history_btn_text">历史记录</string>

    <!-- login/register dialog -->
    <string name="login_dialog_header_login">登陆</string>
    <string name="login_dialog_header_register">注册</string>
    <string name="login_dialog_name">邮箱</string>
    <string name="login_dialog_pwd">密码</string>
    <string name="login_dialog_pwd_confirm">确认密码</string>
    <string name="login_ing_message">正在登陆中，请稍后</string>
    <string name="register_ing_message">正在注册中，请稍后</string>

    <!-- change pwd dialog -->
    <string name="change_pwd_dialog_title">修改密码</string>
    <string name="change_pwd_dialog_initial_pwd">原始密码</string>
    <string name="change_pwd_dialog_new_pwd">新密码</string>
    <string name="change_pwd_dialog_confirm_pwd">确认密码</string>
    <string name="change_pwd_dialog_ing_message">正在与服务器MM申请修改密码，请耐心等待~</string>
    <string name="change_pwd_dialog_success_message">申请成功啦~</string>
    <string name="change_pwd_dialog_fail_message">申请失败/(ㄒoㄒ)/~~</string>

    <!-- monitor history -->
    <string name="monitor_history_title">监控历史数据</string>
    <string name="monitor_history_drawer_title">监&#160;控&#160;历&#160;史</string>
    <string name="monitor_history_status_chart_title">状&#160;态&#160;统&#160;计&#160;图</string>

</resources>
