<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar"
        android:id="@+id/backup_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/backup_item_height"
        android:id="@+id/backup_backup_item"
        android:textSize="@dimen/textsize_second_title"
        android:gravity="center_vertical"
        android:text="@string/backup_backup"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/dash_line"
        android:layerType="software"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/backup_item_height"
        android:id="@+id/backup_sync_item"
        android:textSize="@dimen/textsize_second_title"
        android:gravity="center_vertical"
        android:text="@string/backup_sync"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/dash_line"
        android:layerType="software"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/backup_item_height"
        android:id="@+id/backup_clear_item"
        android:textSize="@dimen/textsize_second_title"
        android:gravity="center_vertical"
        android:text="@string/backup_clear"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

</LinearLayout>