<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/measure_detial_rel"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/measure_blood_high_tv"
                android:textSize="@dimen/textSize_normal"
                android:text="@string/measure_blood_high_pressure"/>

            <TextView
                android:layout_width="@dimen/measure_blood_tv_width"
                android:layout_height="wrap_content"
                android:id="@+id/measure_blood_pressure_high_tv"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/textSize_normal"
                android:gravity="end"
                android:text="120"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/measure_blood_low_tv"
                android:textSize="@dimen/textSize_normal"
                android:text="@string/measure_blood_low_pressure"/>

            <TextView
                android:layout_width="@dimen/measure_blood_tv_width"
                android:layout_height="wrap_content"
                android:id="@+id/measure_blood_pressure_low_tv"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/textSize_normal"
                android:gravity="end"
                android:text="80"/>

        </RelativeLayout>

    </LinearLayout>



    <!-- 测量数据曲线图 -->
    <com.ivan.healthcare.healthcare_android.view.chart.LineChart
        android:layout_width="match_parent"
        android:layout_height="@dimen/measure_chart_height"
        android:id="@+id/measure_chart"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/measure_detial_rel"/>




    <!-- 测量进度条及其数据 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/measure_pr_rel"
        android:layout_above="@id/measure_chart"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.ivan.healthcare.healthcare_android.view.CircleProgressView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:id="@+id/measure_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beep_textview"
            android:layout_centerInParent="true"
            android:paddingRight="@dimen/measure_beep_textview_padding_right"
            android:paddingEnd="@dimen/measure_beep_textview_padding_right"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingBottom="@dimen/measure_beep_textview_padding_bottom"
            android:textSize="@dimen/measure_beep_textview_textsize"
            android:textColor="@color/textColorPrimary"
            android:text="64"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/beep_unit_textview"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/beep_textview"
            android:paddingBottom="@dimen/measure_beep_unit_textview_padding_bottom"
            android:gravity="bottom"
            android:layout_toRightOf="@id/beep_textview"
            android:layout_toEndOf="@id/beep_textview"
            android:layout_marginLeft="@dimen/measure_beep_textview_margin_left"
            android:layout_marginStart="@dimen/measure_beep_textview_margin_left"
            android:textSize="@dimen/measure_beep_unit_textsize"
            android:text="@string/beep_unit"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/measure_btn_margin_top">

            <com.ivan.healthcare.healthcare_android.view.material.ButtonFlat
                app:ripple_color="@color/colorPrimaryLight"
                android:layout_width="@dimen/measure_start_btn_width"
                android:layout_height="@dimen/measure_start_btn_height"
                android:id="@+id/beep_measure_btn"
                android:textSize="@dimen/textSize_second_title"
                android:textColor="@color/colorPrimary"
                android:text="@string/measure_text"/>

        </FrameLayout>

    </RelativeLayout>




</RelativeLayout>
